--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=SistemaFacturacion
+application.vendor=carri
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,18 +27,55 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/SistemaFacturacion.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
-file.reference.jbarcodebean-1.2.0.jar=plugins\\jbarcodebean-1.2.0.jar
-file.reference.jcalendar-1.4.jar=plugins\\jcalendar-1.4.jar
+file.reference.AbsoluteLayout.jar=plugins/AbsoluteLayout.jar
+file.reference.commons-beanutils-1.8.0.jar=plugins/commons-beanutils-1.8.0.jar
+file.reference.commons-collections-2.1.1.jar=plugins/commons-collections-2.1.1.jar
+file.reference.commons-digester-1.7.jar=plugins/commons-digester-1.7.jar
+file.reference.commons-javaflow-20060411.jar=plugins/commons-javaflow-20060411.jar
+file.reference.commons-logging-1.1.3-javadoc.jar=plugins/commons-logging-1.1.3-javadoc.jar
+file.reference.commons-logging-1.1.3-sources.jar=plugins/commons-logging-1.1.3-sources.jar
+file.reference.commons-logging-1.1.3-test-sources.jar=plugins/commons-logging-1.1.3-test-sources.jar
+file.reference.commons-logging-1.1.3-tests.jar=plugins/commons-logging-1.1.3-tests.jar
+file.reference.commons-logging-1.1.3.jar=plugins/commons-logging-1.1.3.jar
+file.reference.commons-logging-adapters-1.1.3.jar=plugins/commons-logging-adapters-1.1.3.jar
+file.reference.commons-logging-api-1.1.3.jar=plugins/commons-logging-api-1.1.3.jar
+file.reference.commons-logging-tests.jar=plugins/commons-logging-tests.jar
+file.reference.iText-2.1.0.jar=plugins/iText-2.1.0.jar
+file.reference.jasperreports-3.6.1.jar=plugins/jasperreports-3.6.1.jar
+file.reference.jasperreports-javaflow-3.6.1.jar=plugins/jasperreports-javaflow-3.6.1.jar
+file.reference.jbarcodebean-1.2.0.jar=plugins/jbarcodebean-1.2.0.jar
+file.reference.jcalendar-1.4.jar=plugins/jcalendar-1.4.jar
+file.reference.png-encoder-1.5.jar=plugins/png-encoder-1.5.jar
+file.reference.poi-3.2-FINAL-20081019.jar=plugins/poi-3.2-FINAL-20081019.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${libs.MySQLDriver.classpath}:\
     ${file.reference.jbarcodebean-1.2.0.jar}:\
     ${file.reference.jcalendar-1.4.jar}:\
-    ${libs.JasperReports.classpath}:\
-    ${libs.JasperReportViewer.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.AbsoluteLayout.jar}:\
+    ${file.reference.commons-beanutils-1.8.0.jar}:\
+    ${file.reference.commons-collections-2.1.1.jar}:\
+    ${file.reference.commons-digester-1.7.jar}:\
+    ${file.reference.commons-javaflow-20060411.jar}:\
+    ${file.reference.commons-logging-1.1.3-javadoc.jar}:\
+    ${file.reference.commons-logging-1.1.3-sources.jar}:\
+    ${file.reference.commons-logging-1.1.3-test-sources.jar}:\
+    ${file.reference.commons-logging-1.1.3-tests.jar}:\
+    ${file.reference.commons-logging-1.1.3.jar}:\
+    ${file.reference.commons-logging-adapters-1.1.3.jar}:\
+    ${file.reference.commons-logging-api-1.1.3.jar}:\
+    ${file.reference.commons-logging-tests.jar}:\
+    ${file.reference.iText-2.1.0.jar}:\
+    ${file.reference.jasperreports-3.6.1.jar}:\
+    ${file.reference.jasperreports-javaflow-3.6.1.jar}:\
+    ${file.reference.jbarcodebean-1.2.0.jar}:\
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.png-encoder-1.5.jar}:\
+    ${file.reference.poi-3.2-FINAL-20081019.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
